Make fix resource connection in env before run task to be sync